fixes for spacing

--- a/manon/components/avatar.scss
+++ b/manon/components/avatar.scss
@@ -12,6 +12,7 @@
   align-items: center;
   justify-content: center;
   text-decoration: theme.$avatar-text-text-decoration;
+  font-family: theme.$avatar-text-font-family;
   font-size: theme.$avatar-text-font-size;
   font-weight: theme.$avatar-font-weight;
   border-radius: theme.$avatar-border-radius;
