--- a/manon/variables/_avatar.scss
+++ b/manon/variables/_avatar.scss
@@ -5,6 +5,7 @@ $avatar-min-width: null !default;
 $avatar-min-height: 2rem !default;
 $avatar-max-width: null !default;
 $avatar-max-height: null !default;
+$avatar-text-font-family: null !default;
 $avatar-text-font-size: null !default;
 $avatar-font-weight: null !default;
 $avatar-border-radius: null !default;
